<resources>
    <string name="app_name">Water_Reminder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pref_notification_message_value">Hey… It\'s time to drink some water…</string>
    <string name="add_info_text">Please provide some information to customize the experience for you…!!</string>
    <string name="str_continue">Continue</string>
    <string name="enter_your_name_hint">Enter your name</string>
    <string name="age_hint">Enter your age</string>
    <string name="weight_hint">Weight (Kg)</string>
    <string name="custom_intake_hint">Your Target Intake (ml)</string>
    <string name="workout_hint">Daily Workout (min/Day)</string>
    <string name="wakeup_hint">Wake Up</string>
    <string name="sleeping_hint">Bed Time</string>
    <string name="tagline_text">Let\'s keep you hydrated…</string>
    <string name="get_started">Get Started</string>
    <string name="edit_info_text">Edit Your Information</string>
    <string name="update">Update</string>
    <string name="notif_setting_header">Notification Settings</string>
    <string name="notif_messsage_hint">Notification Message</string>
    <string name="notif_tone_hint">Notification Tone</string>
    <string name="notif_freq_hint">Notification Frequency</string>
    <string name="walkthrough_text_one">Water is 60 percent of your body weight. Your body depends on water to
        survive.
    </string>
    <string name="walkthough_text_two">Lack of water can lead to dehydration. Even mild dehydration can drain you and
        make you tired.
    </string>
    <string name="walkthrough_text_three">Every cell, tissue and organ in your body needs water to work properly.
    </string>
    <string name="_60_min">60 Min</string>
    <string name="_45_min">45 Min</string>
    <string name="_30_min">30 Min</string>
</resources>